# sqf-analyzer-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  example.sqf  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
.github/workflows/: publish.yml
client/: .vscodeignore  README.md  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: extension.ts
src/: addon.rs  analyze.rs  completion.rs  definition.rs  hover.rs  lib.rs  main.rs  semantic_token.rs
tests/addons/test/: config.cpp  fn_basic.sqf
