[package]
name = "sqf-analyzer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
rayon = "*"

#sqf = { git = "https://github.com/sqf-analyzer/sqf-analyzer" }
sqf = { path = "../sqf" }
lazy_static = "*"
